Testpoint and Tools working ish

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Ryan Goniwiecha
-  description: perfSONAR Toolkit, designed for Docker
+  description: perfSONAR Testpoint and Toolkit, designed for Docker
   company: University of Michigan ITS
 
   license: Apache 2.0
